--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <!-----------------------------------------------------------Navbar-------------------------------------------------------------------------------------------------------------->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,20 +25,13 @@
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
 <!-------------------------------------------------------------------------------Intro--------------------------------------------------------------------------------------------->	
@@ -59,22 +52,28 @@
             </div>
         </div>
     </div>
+<!----------------------------------------------------------------------------------transport options------------------------------------------------------------------------------>
     <div class="transport container-fluid">
         <div class="row">
             <div class=" walk col">
                 <h2>Walk</h2>
+                <h2><i class="fas fa-shoe-prints"></i></h2>
             </div>
             <div class="cycle col">
                 <h2>Cycle</h2>
+                <h2><i class="fas fa-bicycle"></i></h2>
             </div>
             <div class=" drive col">
                 <h2>Drive</h2>
+                <h2><i class="fas fa-car-side"></i></h2>
             </div>
             <div class=" fly col">
                 <h2>Fly</h2>
+                <h2><i class="fas fa-plane"></i></h2>
             </div>
         </div>
     </div>
+<!------------------------------------------------------------------------------skyscanner api------------------------------------------------------------------------------------->
     <div class="container-fluid">
         <div class="row">
             <div class=" travel col">
@@ -82,13 +81,14 @@
             </div>
         </div>
     </div>
+<!---------------------------------------------------------------------------------footer------------------------------------------------------------------------------------------>
     <div class="container-fluid">
         <div class="row">
-            <div class="social col">
+            <div class="footer col">
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li><i class="fab fa-facebook-square"></i></li>
+                    <li><i class="fab fa-instagram"></i></li>
+                    <li><i class="fab fa-twitter-square"></i></li>
                 </ul>
             </div>
         </div>
