--- a/index.html
+++ b/index.html
@@ -63,20 +63,13 @@
     <div class="transport container-fluid">
         <div class="row">
             <div class=" walk col">
-                <h2>Walk</h2>
-                <h2><i class="fas fa-shoe-prints"></i></h2>
+                <h2>Clock</h2>
+                <h2><i class="far fa-clock"></i></h2>
+                <p id="clock"></p>
             </div>
             <div class="cycle col">
-                <h2>Cycle</h2>
-                <h2><i class="fas fa-bicycle"></i></h2>
-            </div>
-            <div class=" drive col">
-                <h2>Drive</h2>
-                <h2><i class="fas fa-car-side"></i></h2>
-            </div>
-            <div class=" fly col">
-                <h2>Fly</h2>
-                <h2><i class="fas fa-plane"></i></h2>
+                <h2>Weather</h2>
+                <h2><i class="fas fa-cloud"></i></h2>
             </div>
         </div>
     </div>
@@ -85,7 +78,6 @@
         <div class="row">
             <div class=" travel col">
                 <h2>Travel API here</h2>
-                
             </div>
         </div>
     </div>
@@ -116,7 +108,7 @@
 	</script>
      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
     <script src = "assets/js/map.js" type = "text/javascript"></script>
-    <script src = "assets/js/script.js" type = "text/javascript"></script>
+    <script src = "assets/js/clock.js" type = "text/javascript"></script>
     
 </body>
 
