--- a/index.html
+++ b/index.html
@@ -38,13 +38,8 @@
 <!-------------------------------------------------------------------------------Intro--------------------------------------------------------------------------------------------->	
     <div class="introduction container-fluid">
         <div class= "row">
-            <div class = "location col-6">
-                <h1>Destination</h1>
-                     <div id="weather-container">
-                     <img class="icon">
-                     <p class="weather"></p>
-                     <p class="temp"></p>
-                    </div>
+            <div class = "books col-6">
+                <h1>Google Books</h1>
             </div>
             <div class="map col-6">
                 <div id="map">
@@ -62,14 +57,19 @@
 <!----------------------------------------------------------------------------------transport options------------------------------------------------------------------------------>
     <div class="transport container-fluid">
         <div class="row">
-            <div class=" walk col">
+            <div class=" clock col">
                 <h2>Clock</h2>
                 <h2><i class="far fa-clock"></i></h2>
                 <p id="clock"></p>
             </div>
-            <div class="cycle col">
+            <div class="col">
                 <h2>Weather</h2>
                 <h2><i class="fas fa-cloud"></i></h2>
+                    
+                        <img class="icon">
+                        <p class="weather"></p>
+                        <p class="temp"></p>
+                        <p class="time"></p>
             </div>
         </div>
     </div>
@@ -86,9 +86,9 @@
         <div class="row">
             <div class="footer col">
                 <ul>
-                    <li><i class="fab fa-facebook-square"></i></li>
-                    <li><i class="fab fa-instagram"></i></li>
-                    <li><i class="fab fa-twitter-square"></i></li>
+                    <a href="https://www.facebook.com/" target="_blank"><li><i class="fab fa-facebook-square"></i></li></a>
+                    <a href="https://www.instagram.com/" target="_blank"><li><i class="fab fa-instagram"></i></li></a>
+                    <a href="https://twitter.com/" target="_blank"><li><i class="fab fa-twitter-square"></i></li></a>
                 </ul>
             </div>
         </div>
@@ -109,6 +109,7 @@
      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
     <script src = "assets/js/map.js" type = "text/javascript"></script>
     <script src = "assets/js/clock.js" type = "text/javascript"></script>
+    <script src = "assets/js/weather.js" type = "text/javascript"></script>
     
 </body>
 
