--- a/index.html
+++ b/index.html
@@ -61,15 +61,14 @@
                 <h2>Clock</h2>
                 <h2><i class="far fa-clock"></i></h2>
                 <p id="clock"></p>
+                <p id="date"></p>
             </div>
             <div class="col">
                 <h2>Weather</h2>
-                <h2><i class="fas fa-cloud"></i></h2>
-                    
-                        <img class="icon">
-                        <p class="weather"></p>
-                        <p class="temp"></p>
-                        <p class="time"></p>
+                    <img class="icon">
+                    <p class="weather"></p>
+                    <p class="temp"></p>
+                    <p class="time"></p>
             </div>
         </div>
     </div>
@@ -110,6 +109,7 @@
     <script src = "assets/js/map.js" type = "text/javascript"></script>
     <script src = "assets/js/clock.js" type = "text/javascript"></script>
     <script src = "assets/js/weather.js" type = "text/javascript"></script>
+    <script src = "assets/js/date.js" type = "text/javascript"></script>
     
 </body>
 
