country section added

--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
 <!-------------------------------------------------------------------------------Intro--------------------------------------------------------------------------------------------->	
     <div class="introduction container-fluid">
         <div class= "row">
-            <div class = "books col-6">
-                <h1>Google Books</h1>
+            <div class = "countries col-6">
+               <h2>Countries</h2>
+                   <p class="flag" style="height:50px;"></p>
+                   <p class="capital"></p>
+                   <p class="population"></p>
+                   <p class="language"></p>
+                   <p class="region"></p>
             </div>
+
             <div class="map col-6">
                 <div id="map">
                 </div>
@@ -92,9 +98,7 @@
             </div>
         </div>
     </div>
-    <!--api.openweathermap.org/data/2.5/weather?q=London,uk&APPID=2a1b20e296836689a2296c960cf5a29a-->
-
-
+    
     <script
         src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
@@ -110,10 +114,7 @@
     <script src = "assets/js/clock.js" type = "text/javascript"></script>
     <script src = "assets/js/weather.js" type = "text/javascript"></script>
     <script src = "assets/js/date.js" type = "text/javascript"></script>
-    
+    <script src = "assets/js/countries.js" type = "text/javascript"></script>
 </body>
 
 </html>
-
-<!--<p>apikey:2a1b20e296836689a2296c960cf5a29a</p>
-                <p>https://api.openweathermap.org/data/2.5/weather?q=dublin&appid=2a1b20e296836689a2296c960cf5a29a</p>-->
