rough map draft

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
         <div class="row">
             <div class="col">
                 <h2 id="greeting"></h2>
+                <div id="floating-panel">
+                <input id="address" type="textbook" value="Dublin,Ireland">
+                <input id="submit" type="button" value="Geocode">
+                </div>
             </div>
         </div>
     </div>
@@ -116,7 +120,7 @@
 		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
 	</script>
      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
-    <script src = "assets/js/map.js" type = "text/javascript"></script>
+    <script src = "assets/js/maps.js" type = "text/javascript"></script>
     <script src = "assets/js/clock.js" type = "text/javascript"></script>
     <script src = "assets/js/weather.js" type = "text/javascript"></script>
     <script src = "assets/js/date.js" type = "text/javascript"></script>
@@ -124,3 +128,13 @@
 </body>
 
 </html>
+
+<!--<div id="floating-panel">
+  <input id="address" type="textbox" value="Sydney, NSW">
+  <input id="submit" type="button" value="Geocode">
+</div>
+<div id="map"></div>
+<!-- Replace the value of the key parameter with your own API key. 
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap">
+</script>-->
