--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-light">
         <a class="navbar-brand" id="top">Navbar</a>
             <input id="search" placeholder="Country">
-            <button id="country" onclick="otherFunction(document.getElementById('search').value)">Search</button>
+            <button id="country" onclick="otherFunction(document.getElementById('search').value,cityweather())">Search</button>
           
     </nav>
 
@@ -75,9 +75,19 @@
 <div class="container-fluid parallax3"></div>
 
 <div class="container-fluid scroll3">
-Scroll Up and Down this page to see the parallax scrolling effect.
-This div is just here to enable scrolling.
-Tip: Try to remove the background-attachment property to remove the scrolling effect.
+    <div class="row">
+        <div class="col">
+            <h2>city weather</h2>
+            <img class="icon2">
+            <p class="weather2"></p>
+            <p><span class="temp2"></span>degrees celsius</p>
+        </div>
+        <div class="col">
+            <p>something something</p>
+        </div>
+    </div>
+
+
 </div>
 
     <div class="footer container-fluid">
@@ -109,6 +119,7 @@ Tip: Try to remove the background-attachment property to remove the scrolling ef
     <script src = "assets/js/countries.js" type = "text/javascript"></script>
     <script src = "assets/js/city.js" type = "text/javascript"></script>
     <script src = "assets/js/country.js" type = "text/javascript"></script>
+    <script src = "assets/js/weather2.js" type = "text/javascript"></script>
 </body>
 </html>
 
