more work on second weather app

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      <div class="container-fluid">
         <div class="row">
             <div class=" clock col">
-                <h2>Clock</h2>
+                <h2>Ireland</h2>
                 <h2><i class="far fa-clock"></i></h2>
                 <p id="clock"></p>
                 <p id="date"></p>
@@ -79,8 +79,8 @@
         <div class="col">
             <h2>city weather</h2>
             <img class="icon2">
-            <p class="weather2"></p>
-            <p><span class="temp2"></span>degrees celsius</p>
+            <p id="weather2"></p>
+            <p><span id="temp2"></span>degrees celsius</p>
         </div>
         <div class="col">
             <p>something something</p>
