nearly there with added weather

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </div>
 <!------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 
-<div class="container-fluid scroll">
+<div id="country-info" class="container-fluid scroll">
     <div id="results">
         <div id="flag">
             <img src="">
@@ -80,14 +80,15 @@
             <h2>city weather</h2>
             <img class="icon2">
             <p id="weather2"></p>
-            <p><span id="temp2"></span>degrees celsius</p>
+            <p id="temp2"></p>
+            <p id="wind2"></p>
+            <p id="direction2"></p>
+            <p id="humidity2"></p>    
         </div>
         <div class="col">
             <p>something something</p>
         </div>
     </div>
-
-
 </div>
 
     <div class="footer container-fluid">
