--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-light">
         <a class="navbar-brand" id="top">Navbar</a>
             <input id="search" placeholder="Country">
-            <button id="country" onclick="otherFunction(document.getElementById('search').value,cityweather())">Search</button>
+            <button id="country" onclick="otherFunction(document.getElementById('search').value,cityweather(document.getElementById('search').value))">Search</button>
           
     </nav>
 
@@ -112,7 +112,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
 		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
 	</script>
-     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
+     
     <script src = "assets/js/map.js" type = "text/javascript"></script>
     <script src = "assets/js/clock.js" type = "text/javascript"></script>
     <script src = "assets/js/weather.js" type = "text/javascript"></script>
@@ -121,6 +121,7 @@
     <script src = "assets/js/city.js" type = "text/javascript"></script>
     <script src = "assets/js/country.js" type = "text/javascript"></script>
     <script src = "assets/js/weather2.js" type = "text/javascript"></script>
+     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
 </body>
 </html>
 
