--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!--------------------------------------------------------------------navbar/clock/weather----------------------------------------------------------------------------------->
 <div class="container-fluid parallax">
     <nav class="navbar navbar-light">
-        <a class="navbar-brand" id="top">Navbar</a>
+        <a class="navbar-brand" id="top">Please select a country</a>
             <input id="search" placeholder="Country">
             <button id="country" onclick="otherFunction(document.getElementById('search').value,cityweather(document.getElementById('search').value))">Search</button>
           
@@ -31,18 +31,16 @@
      <div class="container-fluid">
         <div class="row">
             <div class=" clock col">
-                <h2>Ireland</h2>
                 <h2><i class="far fa-clock"></i></h2>
-                <p id="clock"></p>
+                <h5 id="clock"></h5>
                 <p id="date"></p>
                 <h2 id="greeting"></h2>
             </div>
 
             <div class="col">
-                <h2>Weather</h2>
                 <img class="icon">
-                <p class="weather"></p>
-                <p><span class="temp"></span>degrees celsius</p>
+                <h5 class="weather"><h5>
+                <h5><span class="temp"></span>degrees celsius<h5>
             </div>
         </div>
     </div>
@@ -53,10 +51,10 @@
     <div id="results">
         <div id="flag">
             <img src="">
-                <p class="capital">Capital:</p>
-                <p class="population">Population:</p>
-                <p class="language">Native Language:</p>
-                <p class="region">Region:</p>
+                <p id="capital">Capital:</p>
+                <p id="population">Population:</p>
+                <p id="language">Native Language:</p>
+                <p id="region">Region:</p>
         </div>
     </div>
 </div>
@@ -77,7 +75,7 @@
 <div class="container-fluid scroll3">
     <div class="row">
         <div class="col">
-            <h2>city weather</h2>
+            <h2>Weather</h2>
             <img class="icon2">
             <p id="weather2"></p>
             <p id="temp2"></p>
@@ -96,9 +94,8 @@
             <div class="col">
                 <ul>
                     <a href="https://www.facebook.com/" target="_blank"><li><i class="fab fa-facebook-square"></i></li></a>
-                    <a href="https://www.instagram.com/" target="_blank"><li><i class="fab fa-instagram"></i></li></a>
+                    <a href="#top"><li><i id="totop"class="far fa-caret-square-up"></i></li></a>
                     <a href="https://twitter.com/" target="_blank"><li><i class="fab fa-twitter-square"></i></li></a>
-                    <a href="#top"><li><i class="far fa-caret-square-up"></i></li></a>
                 </ul>
             </div>
         </div>
