--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-light">
         <a class="navbar-brand" id="top">Please select a country</a>
             <input id="search" placeholder="Country">
-            <button id="country" onclick="otherFunction(document.getElementById('search').value,cityweather(document.getElementById('search').value))">Search</button>
+            <button id="country" onclick="newMap(),otherFunction(document.getElementById('search').value,countryweather(document.getElementById('search').value))">Search</button>
           
     </nav>
 
@@ -34,7 +34,7 @@
                 <h2><i class="far fa-clock"></i></h2>
                 <h5 id="clock"></h5>
                 <p id="date"></p>
-                <h2 id="greeting"></h2>
+                <h3 id="greeting"></h3>
             </div>
 
             <div class="col">
@@ -55,6 +55,8 @@
                 <p id="population">Population:</p>
                 <p id="language">Native Language:</p>
                 <p id="region">Region:</p>
+               
+                <p>See weather for this country<a href="#bottom"><i id="tobottom" class="far fa-caret-square-down"></i></a></p>
         </div>
     </div>
 </div>
@@ -75,16 +77,13 @@
 <div class="container-fluid scroll3">
     <div class="row">
         <div class="col">
-            <h2>Weather</h2>
+            <h2 id="bottom">Weather</h2>
             <img class="icon2">
             <p id="weather2"></p>
             <p id="temp2"></p>
             <p id="wind2"></p>
             <p id="direction2"></p>
             <p id="humidity2"></p>    
-        </div>
-        <div class="col">
-            <p>something something</p>
         </div>
     </div>
 </div>
@@ -115,10 +114,11 @@
     <script src = "assets/js/weather.js" type = "text/javascript"></script>
     <script src = "assets/js/date.js" type = "text/javascript"></script>
     <script src = "assets/js/countries.js" type = "text/javascript"></script>
-    <script src = "assets/js/city.js" type = "text/javascript"></script>
     <script src = "assets/js/country.js" type = "text/javascript"></script>
     <script src = "assets/js/weather2.js" type = "text/javascript"></script>
-     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
+    <script src = "assets/js/maps2.js" type = "text/javascript"></script>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
 </body>
 </html>
 
