--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-light">
         <a class="navbar-brand" id="top">Please select a country</a>
             <input id="search" placeholder="Country">
-            <button id="country" onclick="newMap(),otherFunction(document.getElementById('search').value,countryweather(document.getElementById('search').value))">Search</button>
+            <button id="country" onclick="otherFunction(document.getElementById('search').value,countryweather(document.getElementById('search').value),newMap())">Search</button>
           
     </nav>
 
@@ -113,11 +113,10 @@
     <script src = "assets/js/clock.js" type = "text/javascript"></script>
     <script src = "assets/js/weather.js" type = "text/javascript"></script>
     <script src = "assets/js/date.js" type = "text/javascript"></script>
-    <script src = "assets/js/countries.js" type = "text/javascript"></script>
-    <script src = "assets/js/country.js" type = "text/javascript"></script>
+    <script src = "assets/js/countries2.js" type = "text/javascript"></script>
     <script src = "assets/js/weather2.js" type = "text/javascript"></script>
-    <script src = "assets/js/maps2.js" type = "text/javascript"></script>
-
+    <!---<script src = "assets/js/maps2.js" type = "text/javascript"></script>-->
+    
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
 </body>
 </html>
