--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <!--------------------------------------------------------------------navbar/clock/weather------------------------------------------------------------------>
 <div class="container-fluid parallax">
     <nav class="navbar navbar-light">
-        <a class="navbar-brand" id="top">Please select a country</a>
-            <input id="search" placeholder="Country">
-            <button id="country" onclick="otherFunction(document.getElementById('search').value,countryweather(document.getElementById('search').value),newMap())">Search</button>
+        <h3 class="navbar-brand" id="top">Please select a country</h3>
+            <select id="search"></select>
+            <button id="country" onclick="countryInfo(document.getElementById('search').value,countryweather(document.getElementById('search').value),newMap())">Search</button>
     </nav>
 
     <div class="container-fluid">
@@ -33,7 +33,7 @@
                 <h2><i class="far fa-clock"></i></h2>
                 <h5 id="clock"></h5>
                 <p id="date"></p>
-                <h3 id="greeting"></h3>
+                <h4 id="greeting"></h4>
             </div>
 
             <div class="col">
@@ -107,6 +107,7 @@
     <script src = "assets/js/weather.js" type = "text/javascript"></script>
     <script src = "assets/js/date.js" type = "text/javascript"></script>
     <script src = "assets/js/countries2.js" type = "text/javascript"></script>
+    <script src = "assets/js/countries3.js" type = "text/javascript"></script>
     <script src = "assets/js/weather2.js" type = "text/javascript"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
 </body>
