--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h4 id="greeting"></h4>
             </div>
 
-            <div class="col">
+            <div id="main-weather" class="col">
                 <img class="icon">
                 <h5 id="weather"><h5>
                 <h5 id="temp"><h5>
