--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Where To</title>
+	<title>Country info,location and weather.</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -19,34 +19,35 @@
 	<link href="assets/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<!--------------------------------------------------------------------navbar/clock/weather------------------------------------------------------------------>
+            <!--------------------------------------------- navbar/clock/weather ------------------------------------------------------>
 <div class="container-fluid parallax">
     <nav class="navbar navbar-light">
         <h3 class="navbar-brand" id="top">Please select a country</h3>
         <div id="searchbar">
-            <select id="search"></select>
-            <button id="country" onclick="countryInfo(document.getElementById('search').value,countryweather(document.getElementById('search').value),newMap())">Search</button>
+            <select id="country"></select>
+            <button id="search" onclick="countryInfo(document.getElementById('country').value,countryweather(document.getElementById('country').value),newMap())">Search</button>
         </div>
     </nav>
 
     <div class="container-fluid">
         <div class="row">
-            <div class=" clock col">
-                <h2><i class="far fa-clock"></i></h2>
-                <h5 id="clock"></h5>
-                <p id="date"></p>
-                <h4 id="greeting"></h4>
+            <div class="clock col">
+                <!---<div id="clock-icon"><i class="far fa-clock"></i></div>-->
+                <div id="clock"></div>
+                <div id="date"></div>
+                <br>
+                <div id="greeting"></div>
             </div>
 
             <div id="main-weather" class="col">
-                <img class="icon">
-                <h5 id="weather"><h5>
-                <h5 id="temp"><h5>
+                <img class="icon" alt="weather icon">
+                <div id="weather"></div>
+                <div id="temp"></div>
             </div>
         </div>
     </div>
 </div>
-<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+<!--------------------------------------------------------- main section ------------------------------------------------------------------------------>
 
 <div id="country-info" class="container-fluid scroll">
     <div id="results">
@@ -63,8 +64,7 @@
 
 <div class="container-fluid parallax2"></div>
 <div id=scroll2 class="container-fluid scroll2">
-    <div id="map">
-    </div>
+    <div id="map"></div>
     <p>Weather for this country<a href="#bottom"><i id="tobottom2" class="far fa-caret-square-down"></i></a></p>
 </div>
 
@@ -73,7 +73,7 @@
     <div class="row">
         <div class="col">
             <h2 id="bottom">Weather</h2>
-            <img class="icon2">
+            <br>
             <p id="weather2"></p>
             <p id="temp2"></p>
             <p id="wind2"></p>
@@ -87,13 +87,14 @@
     <div class="row">
         <div class="col">
             <ul>
-                <a href="https://www.facebook.com/" target="_blank"><li><i class="fab fa-facebook-square"></i></li></a>
-                <a href="#top"><li><i id="totop"class="far fa-caret-square-up"></i></li></a>
-                <a href="https://twitter.com/" target="_blank"><li><i class="fab fa-twitter-square"></i></li></a>
+                <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="#top"><i id="totop" class="far fa-caret-square-up"></i></a></li>
+                <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
             </ul>
         </div>
     </div>
 </div>
+
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous"></script>
@@ -104,13 +105,13 @@
 		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
 	</script>
      
-    <script src = "assets/js/map.js" type = "text/javascript"></script>
-    <script src = "assets/js/clock.js" type = "text/javascript"></script>
-    <script src = "assets/js/weather.js" type = "text/javascript"></script>
-    <script src = "assets/js/date.js" type = "text/javascript"></script>
-    <script src = "assets/js/countries2.js" type = "text/javascript"></script>
-    <script src = "assets/js/countries3.js" type = "text/javascript"></script>
-    <script src = "assets/js/weather2.js" type = "text/javascript"></script>
+    <script src = "assets/js/map.js"></script>
+    <script src = "assets/js/clock.js"></script>
+    <script src = "assets/js/weather.js"></script>
+    <script src = "assets/js/date.js"></script>
+    <script src = "assets/js/countries2.js"></script>
+    <script src = "assets/js/countries3.js"></script>
+    <script src = "assets/js/weather2.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
 </body>
 </html>
