--- a/index.html
+++ b/index.html
@@ -105,12 +105,9 @@
 	</script>
      
     <script src = "assets/js/map.js"></script>
-    <script src = "assets/js/clock.js"></script>
+    <script src = "assets/js/script.js"></script>
+    <script src = "assets/js/countries.js"></script>
     <script src = "assets/js/weather.js"></script>
-    <script src = "assets/js/date.js"></script>
-    <script src = "assets/js/countries2.js"></script>
-    <script src = "assets/js/countries3.js"></script>
-    <script src = "assets/js/weather2.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
 </body>
 </html>
