--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="col">
             <h2 id="bottom">Weather</h2>
             <br>
-            <p id="weather2"></p>
+            <p id="weather2">No Data Available</p>
             <p id="temp2"></p>
             <p id="wind2"></p>
             <p id="direction2"></p>
@@ -82,8 +82,8 @@
     </div>
 </div>
         <!--------------------------------------------------------footer--------------------------------------------------------------->
-<div class="footer container-fluid">
-    <div class="row">
+<div id="base" class="container-fluid footer">
+    <divclass="row">
         <div class="col">
             <ul>
                 <li><a href="https://www.facebook.com/" target="_blank"><i id="facebook" class="fab fa-facebook-square"></i></a></li>
